--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
 <link href="https://fonts.googleapis.com/css2?family=Syne:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <nav>
+        <a href="#">
+            <img src="./assets/icons/logo.svg" alt="">
+        </a>
+        <a href="#">
+            <img src="./assets/icons/shopping-bag-01.svg" alt="">
+            <span>1</span>
+        </a>
+    </nav>
     
 </body>
 </html>
