--- a/index.html
+++ b/index.html
@@ -27,5 +27,18 @@
         </a>
     </nav>
     
+    <section id="hero">
+        <div>
+            <h1>
+                Snitap, sua vida mais <div>
+                    <span>radical</span>
+                    <span>divertida</span>
+                    <span>saudável</span>
+                    <span>radical</span>
+                </div>
+            </h1>
+        </div>
+    </section>
+
 </body>
 </html>
