adding hero buttons

--- a/index.html
+++ b/index.html
@@ -37,6 +37,19 @@
                     <span>radical</span>
                 </div>
             </h1>
+<div class="buttons">
+    <a href="#" class="button buy shadow">
+        <img src="./assets/icons/shopping-bag-01.svg" alt="">
+        COMPRAR AGORA
+    </a>
+<a href="#" class="button play">
+    <span class="shadow"><img src="./assets/icons/play.svg" alt=""></span>
+VEJA EM AÇÃO
+</a>
+
+
+</div>
+
         </div>
     </section>
 
