adding animation hero image

--- a/index.html
+++ b/index.html
@@ -49,9 +49,17 @@ VEJA EM AÇÃO
 
 
 </div>
+</div>
 
-        </div>
-    </section>
+<div>
+<div class="content">
+    <img src="./assets/hero/ellipse.svg" alt="">
+    <img src="./assets/hero/patins-image.png" alt="">
+    <img src="./assets/hero/stars-1.svg" alt="">
+    <img src="./assets/hero/stars-2.svg" alt="">
+</div>
+</div>
+</section>
 
 </body>
 </html>
