adding banner section

--- a/index.html
+++ b/index.html
@@ -61,5 +61,29 @@ VEJA EM AÇÃO
 </div>
 </section>
 
+<section class="banner">
+    <div class="scroller bg-gradient-animate">
+        <div class="rolling">
+            <img src="./assets/icons/banner.svg" alt="banner">
+            <img src="./assets/icons/banner.svg" alt="banner">
+            <img src="./assets/icons/banner.svg" alt="banner">
+            <img src="./assets/icons/banner.svg" alt="banner">
+            <img src="./assets/icons/banner.svg" alt="banner">
+            <img src="./assets/icons/banner.svg" alt="banner">
+            <img src="./assets/icons/banner.svg" alt="banner">
+            <img src="./assets/icons/banner.svg" alt="banner">
+            <img src="./assets/icons/banner.svg" alt="banner">
+            <img src="./assets/icons/banner.svg" alt="banner">
+            <img src="./assets/icons/banner.svg" alt="banner">
+            <img src="./assets/icons/banner.svg" alt="banner">
+            <img src="./assets/icons/banner.svg" alt="banner">
+            <img src="./assets/icons/banner.svg" alt="banner">
+            <img src="./assets/icons/banner.svg" alt="banner">
+            <img src="./assets/icons/banner.svg" alt="banner">
+
+        </div>
+    </div>
+</section>
+
 </body>
 </html>
