--- a/index.html
+++ b/index.html
@@ -85,5 +85,45 @@ VEJA EM AÇÃO
     </div>
 </section>
 
+<section class="gallery">
+    <header>
+        <span>GALERIA DE FOTOS</span>
+        <h2>#usesnitap por aí</h2>
+</header>
+<div class="content">
+    <figure>
+        <img src="./assets/images/image 01.png" alt="">
+        <figcaption>
+            <img src="./assets/person.png" alt="">
+            <span>@laviniapereira</span>
+        </figcaption>
+    </figure>
+
+    <figure data-delay>
+        <img src="./assets/images/image 02.png" alt="">
+        <figcaption>
+            <img src="./assets/person.png" alt="">
+            <span>@laviniapereira</span>
+        </figcaption>
+    </figure>
+
+    <figure>
+        <img src="./assets/images/image 03.png" alt="">
+        <figcaption>
+            <img src="./assets/person.png" alt="">
+            <span>@laviniapereira</span>
+        </figcaption>
+    </figure>
+
+    <figure data-delay>
+        <img src="./assets/images/image 04.png" alt="">
+        <figcaption>
+            <img src="./assets/person.png" alt="">
+            <span>@laviniapereira</span>
+        </figcaption>
+    </figure>
+</div>
+</section>
+
 </body>
 </html>
