--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Syne:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav>
+    <nav class="one">
         <a href="#">
             <img src="./assets/icons/logo.svg" alt="">
         </a>
@@ -124,6 +124,33 @@ VEJA EM AÇÃO
     </figure>
 </div>
 </section>
+
+<footer>
+    <div class="logo">
+        <img src="./assets/icons/logo.svg" alt="">
+        Snitap
+    </div>
+    <nav>
+        <a href="#">Sobre</a>
+        <a href="#">Nossas lojas</a>
+        <a href="#">Política de privacidade</a>
+    </nav>
+
+    <div class="social-links">
+        <a href="#" title="instagram">
+            <img src="./assets/icons/instagram.svg" alt="">
+        </a>
+        <a href="#" title="facebook">
+            <img src="./assets/icons/facebook.svg" alt="">
+        </a>
+        <a href="#" title="youtube">
+            <img src="./assets/icons/youtube.svg" alt="">
+        </a>
+        <a href="#" title="tiktok">
+            <img src="./assets/icons/tiktok.svg" alt="">
+        </a>
+    </div>
+</footer>
 
 </body>
 </html>
